[package]
authors     = ["Wei Tang <hi@that.world>"]
description = "An Apache-licensed Ethash implementation."
edition     = "2018"
license     = "Apache-2.0"
name        = "ethash"
version     = "0.4.0"

[dependencies]
byteorder      = { version = "1.4.2", default-features = false }
ethereum-types = { version = "0.11.0", default-features = false }
rlp            = { version = "0.5.0", default-features = false }
sha3           = { version = "0.9.1", default-features = false }

[dev-dependencies]
array-bytes = { version = "1.3.3" }

[features]
default = ["std"]

std = [
	"byteorder/std",
	"ethereum-types/std",
	"rlp/std",
	"sha3/std",
]
