[package]
authors     = ["Wei Tang <hi@that.world>"]
description = "An Apache-licensed Ethash implementation."
edition     = "2018"
license     = "Apache-2.0"
name        = "ethash"
version     = "0.4.1"

[dependencies]
byteorder      = { version = "1.4", default-features = false }
ethereum-types = { version = "0.12", default-features = false }
rlp            = { version = "0.5", default-features = false }
sha3           = { version = "0.9", default-features = false }

[dev-dependencies]
array-bytes = { version = "1.4" }

[features]
default = ["std"]

std = [
	"byteorder/std",
	"ethereum-types/std",
	"rlp/std",
	"sha3/std",
]
